# kubernetes-operator-python

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
charts/backup-operator/: Chart.yaml  values.yaml
charts/backup-operator/crds/: backuppolicy.yaml
charts/backup-operator/templates/: crd.yaml  deployment.yaml  rbac.yaml
examples/: backuppolicy-job.yaml  backuppolicy-snapshots.yaml
examples/minio/: README.md  values.yaml
operator/: __init__.py  crd.py  main.py  metrics.py  rbac.yaml  s3.py  snapshots.py
tests/e2e/: test_backup_flow_kind.sh
tests/unit/: test_crd_validation.py
